# pumi-pic

./: CMakeLists.txt  README.md
gitrm/: CMakeLists.txt  GitrmInputOutput.cpp  GitrmInputOutput.hpp  GitrmIonizeRecombine.hpp  GitrmMesh.cpp  GitrmMesh.hpp  GitrmParticles.cpp  GitrmParticles.hpp  GitrmPush.hpp  GitrmSurfaceModel.cpp  GitrmSurfaceModel.hpp
periodic_data/: periodicZ_5k_3d_tuto_4.ptn  periodicZ_5k_3d_tuto_np4.cpn
periodic_data/periodicZ_5k_3d_tuto.osh/: 0.osh
periodic_data/periodicZ_5k_3d_tuto_4.osh/: 0.osh  1.osh  2.osh  3.osh
src/: GitrmCrossDiffusion.hpp  GitrmIonizeRecombine.hpp  GitrmThermalForce.hpp  pumipic_adjacency.hpp  pumipic_utils.hpp
test/: CMakeLists.txt  borisMove.cpp  print_partition.cpp  test_makePicparts.cpp  testing.cmake
